name:                  warden
version:               0.0.1
license:               AllRightsReserved
author:                Ambiata <info@ambiata.com>
maintainer:            Ambiata <info@ambiata.com>
copyright:             (c) 2015 Ambiata.
synopsis:              warden
category:              System
cabal-version:         >= 1.8
build-type:            Simple
description:           warden.

library
  build-depends:
                       base                            >= 3          && < 5
                     , aeson                           == 0.8.*
                     , ambiata-p
                     , ambiata-x-either
                     , attoparsec                      == 0.12.*
                     , bytestring                      == 0.10.*
                     , cassava                         == 0.4.*
                     , containers                      == 0.5.*
                     , directory                       == 1.2.*
                     , either                          == 4.3.*
                     , filepath                        == 1.3.*
                     , lens
                     , pipes                           == 4.1.*
                     , pipes-bytestring                == 2.1.*
                     , text                            == 1.2.*
                     , transformers                    >= 0.3 && < 5
                     , unix                            == 2.7.*
                     , vector                          == 0.10.*


  ghc-options:
                       -Wall

  hs-source-dirs:
                       src


  exposed-modules:
                       Paths_warden
                       Warden
                       Warden.Check
                       Warden.Data
                       Warden.Data.Numeric
                       Warden.Data.SeparatedValues
                       Warden.Error
                       Warden.Fold
                       Warden.IO
                       Warden.Serial.Json
                       Warden.Serial.Json.Numeric

executable             warden
    ghc-options:       -Wall -threaded -O2
    main-is:           main/warden.hs
    build-depends:     base
                     , ambiata-x-optparse
                     , optparse-applicative            == 0.11.*
                     , text
                     , warden

test-suite test
  type:                exitcode-stdio-1.0

  main-is:             test.hs

  ghc-options:         -Wall -threaded -O2

  hs-source-dirs:
                       test

  build-depends:
                       base                            >= 3          && < 5
                     , QuickCheck                      == 2.7.*
                     , aeson                           == 0.8.*
                     , ambiata-disorder-aeson
                     , ambiata-disorder-core
                     , ambiata-disorder-corpus
                     , ambiata-p
                     , attoparsec                      == 0.12.*
                     , bytestring                      == 0.10.*
                     , cassava                         == 0.4.*
                     , containers                      == 0.5.*
                     , either                          == 4.3.*
                     , filepath                        == 1.3.*
                     , ieee754                         == 0.7.*
                     , lens                            == 4.9.*
                     , pipes                           == 4.1.*
                     , quickcheck-instances            == 0.3.*
                     , temporary                       == 1.2.*
                     , text
                     , vector                          == 0.10.*
                     , warden

test-suite test-io
    type:                exitcode-stdio-1.0

  main-is:             test-io.hs

  ghc-options:         -Wall -threaded -O2

  hs-source-dirs:
                       test

  build-depends:
                       base                            >= 3          && < 5
                     , QuickCheck                      == 2.7.*
                     , ambiata-disorder-core
                     , ambiata-disorder-corpus
                     , ambiata-p
                     , ambiata-x-either
                     , bytestring                      == 0.10.*
                     , cassava                         == 0.4.*
                     , directory
                     , either                          == 4.3.*
                     , filepath                        == 1.3.*
                     , pipes                           == 4.1.*
                     , quickcheck-instances            == 0.3.*
                     , temporary
                     , text                            == 1.2.*
                     , transformers                    >= 0.3 && < 5
                     , vector                          == 0.10.*
                     , unix                            == 2.7.*
                     , warden
